syntax = "proto3";

package blog;

option go_package = "example.com/grpc/blog/gen/src;blogpb";

message Article {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateRequest {
  // Id should be skipped during creation
  Article article = 1;
}

message CreateResponse {
  Article article = 1;
}

message ReadRequest {
  string id = 1;
}

message ReadResponse {
  Article article = 1;
}

message UpdateRequest {
  Article article = 1;
}

message UpdateResponse {
  Article article = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string id = 1;
}

message ListRequest {}

message ListResponse {
  Article article = 1;
}

service Blog {
  rpc Create (CreateRequest) returns (CreateResponse) {}

  rpc Read (ReadRequest) returns (ReadResponse) {}

  rpc Update (UpdateRequest) returns (UpdateResponse) {}

  rpc Delete (DeleteRequest) returns (DeleteResponse) {}

  rpc List (ListRequest) returns (stream ListResponse) {}
}